[gd_scene load_steps=4 format=3 uid="uid://b2tfyxi3p1haf"]

[ext_resource type="Script" path="res://UI/HeartRow.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dtcfd2wqyc6tf" path="res://Assets/Graphics/UI/HeartUIEmpty.png" id="2"]
[ext_resource type="Texture2D" uid="uid://0e5quwjivlkn" path="res://Assets/Graphics/UI/HeartUIFull.png" id="3"]

[node name="HeartRow" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="HeartUIEmpty" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 11.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 1

[node name="HeartUIFull" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 11.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 1
